backend/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/User/" }
                          route:
                            cluster: user_server
                            max_grpc_timeout: 0s

                        - match: { prefix: "/ModelVersion/" }
                          route:
                            cluster: model_version_server
                            max_grpc_timeout: 0s

                        - match: { prefix: "/InferenceImage/" }
                          route:
                            cluster: dl_server
                            max_grpc_timeout: 0s
                        - match: { prefix: "/Dataset/" }
                          route:
                            cluster: dataset_image_info_server
                            max_grpc_timeout: 0s
                        - match: { prefix: "/UserFixImage/" }
                          route:
                            cluster: dataset_image_info_server
                            max_grpc_timeout: 0s

                      cors:
                        allow_origin_string_match:
                          - prefix: "*"
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,authorization,access_token
                        max_age: "1728000"
                        expose_headers: custom-header-1,grpc-status,grpc-message
                http_filters:
                  - name: envoy.grpc_web
                  - name: envoy.cors
                  - name: envoy.router
  clusters:
    - name: user_server
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      # win/mac hosts: Use address: host.docker.internal instead of address: localhost in the line below
      hosts:
        [
          {
            socket_address: { address: host.docker.internal, port_value: 50051 },
          },
        ]
    - name: model_version_server
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      # win/mac hosts: Use address: host.docker.internal instead of address: localhost in the line below
      hosts:
        [
          {
            socket_address: { address: host.docker.internal, port_value: 50053 },
          },
        ]
    - name: dl_server
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      # win/mac hosts: Use address: host.docker.internal instead of address: localhost in the line below
      hosts:
        [
          {
            socket_address: { address: host.docker.internal, port_value: 50052 },
          },
        ]
    - name: dataset_image_info_server
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      # win/mac hosts: Use address: host.docker.internal instead of address: localhost in the line below
      hosts:
        [
          {
            socket_address: { address: host.docker.internal, port_value: 50054 },
          },
        ]
